# public/swagger/swagger.yaml
@@ -6,7 +6,7 @@ info:
   version: 1.0.0
 schemes:
   - http
-basePath: "/search"
+basePath: "/api/v1/search"
 produces:
   - application/json
 
@@ -38,7 +38,7 @@ responses:
 
 paths:
   "/catalog/list/":
-    get:
+    post:
       summary: Получение списка элементов
       description: Получение списка элементов
       parameters:
@@ -53,10 +53,10 @@ paths:
         200:
           description: Метод успешно отработал
           schema:
-          uniqueItems: false
-          type: array
-          items:
-            $ref: '#/definitions/listItem'
+            uniqueItems: false
+            type: array
+            items:
+              $ref: '#/definitions/listItem'
         400:
           $ref: '#/responses/400Error'
         403:
@@ -65,182 +65,6 @@ paths:
           $ref: '#/responses/404Error'
         500:
           $ref: '#/responses/500Error'
-
-  "/catalog/filter/":
-    get:
-      summary: Возвращает варианты значений для параметров фильтра
-      description: Возвращает варианты значений для параметров фильтра
-      parameters:
-      - in: body
-        name: request
-        required: true
-        description: Параметры
-        schema:
-          type: object
-          properties:
-            sectionId:
-              description: ID раздела
-              type: integer
-              example: 3026
-            query:
-              description: Поисковый запрос
-              type: string
-              example: обувь
-            filter:
-              description: Описание параметров и установленных значений
-              type: array
-              items:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    values:
-                      type: array
-              example: [{"id": "93", "values": ["41","42","XXL"]}, {"id": "94", "values": ["white"]}, {"id": "price_base", "values": {"min": "50", "max": "5000"}}]
-      tags:
-      - Catalog
-      responses:
-        '200':
-          description: Метод успешно отработал
-        '400':
-          description: Метод отработал с ошибкой
-        '404':
-          description: Объет не найден
-        '401':
-          description: Ошибка авторизации
-        '500':
-          description: Внутренняя ошибка сервера
-
-  "/search/suggests/":
-    get:
-      summary: Возвращает поисковые подсказки
-      description: Возвращает поисковые подсказки/предложения по товарам и товарным группам
-      parameters:
-      - in: body
-        name: request
-        required: true
-        description: Параметры
-        schema:
-          type: object
-          properties:
-            query:
-              description: Поисковый запрос
-              type: string
-              example: Футболка
-            limits:
-              description: Ограничесние выборки
-              type: object
-              properties:
-                products:
-                  type: integer
-                  example: 5
-                categories:
-                  type: integer
-                  example: 4
-      tags:
-      - Search
-      responses:
-        '200':
-          description: Метод успешно отработал
-        '400':
-          description: Метод отработал с ошибкой
-        '404':
-          description: Объет не найден
-        '401':
-          description: Ошибка авторизации
-        '500':
-          description: Внутренняя ошибка сервера
-
-  "/search/filter/":
-    get:
-      summary: Возвращает варианты значений для параметров фильтра
-      description: Возвращает варианты значений для параметров фильтра
-      parameters:
-      - in: body
-        name: request
-        required: true
-        description: Параметры
-        schema:
-          type: object
-          properties:
-            sectionId:
-              description: ID раздела
-              type: integer
-              example: 3026
-            query:
-              description: Поисковый запрос
-              type: string
-              example: обувь
-            filter:
-              description: Описание параметров и установленных значений
-              type: array
-              items:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    values:
-                      type: array
-              example: [{"id": "93", "values": ["41","42","XXL"]}, {"id": "94", "values": ["white"]}, {"id": "price_base", "values": {"min": "50", "max": "5000"}}]
-      tags:
-      - Search
-      responses:
-        '200':
-          description: Метод успешно отработал
-        '400':
-          description: Метод отработал с ошибкой
-        '404':
-          description: Объет не найден
-        '401':
-          description: Ошибка авторизации
-        '500':
-          description: Внутренняя ошибка сервера
-
-  "/search/list/":
-    get:
-      summary: Получение списка элементов
-      description: Получение списка товаров на основе поискового запроса и фильтрации
-      parameters:
-      - in: body
-        name: request
-        required: true
-        description: Параметры
-        schema:
-          type: object
-          properties:
-            sortField:
-              description: поле для сортировки price, SORT
-              type: string
-              example: "SORT"
-            sortOrder:
-              description: направление сортировки desc, asc
-              type: string
-              example: "asc"
-            pageSize:
-              description: количество товаров на странице
-              type: integer
-              example: 15
-            filterUrl:
-              description: строка фильтрации
-              type: string
-              example: "футболка/filter/brand-is-lacoste/apply/"
-            num:
-              description: номер страницы, которую нужно вернуть
-              type: integer
-              example: 1
-      tags:
-      - Search
-      responses:
-        '200':
-          description: Метод успешно отработал
-        '400':
-          description: Метод отработал с ошибкой
-        '404':
-          description: Объет не найден
-        '401':
-          description: Ошибка авторизации
-        '500':
-          description: Внутренняя ошибка сервера
 
 definitions:
   catalogListFilter:
@@ -465,6 +289,9 @@ definitions:
 
   listItemSingleAttribute:
     type: object
+    required:
+      - id
+      - value
     properties:
       id:
         type: string
@@ -496,6 +323,9 @@ definitions:
 
   listItemMultipleAttribute:
       type: object
+      required:
+        - id
+        - values
       properties:
         id:
           type: string
@@ -531,6 +361,8 @@ definitions:
 
   listItemAttributeValue:
       type: object
+      required:
+        - value
       properties:
         id:
           type: string
